修复增加序列化器引发的bug